# KNOMI

./: README.md  partition-v2.csv  platformio.ini
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build.yml  dependabot.yml
Firmware/ui-ng/: package-lock.json  package.json
boards/: esp32r8.json
data/: config.json  config.schema.json
lib/: config.json
lib/ui/: JsonThemeConfig.h
rs-flasher/: Cargo.toml
rs-flasher/src/: main.rs  segments.rs
rs-flasher/src/segments/: btt_v1_segments.rs  btt_v2_segments.rs  diverofdark_v1_segments.rs  diverofdark_v2_segments.rs  utils.rs
scripts/: generate_fonts.py  generate_images.py  generate_ui.py  git_version.py  merge_firmware.py  run_clangformat.py
src/: config.json  config.schema.json  log.h  main.cpp  tft_setup.h  watchdog.h
src/button/: Button.cpp  Button.h
src/config/: BaseConfig.h  Config.h  KlipperConfig.h  NetworkConfig.h  SecurityConfig.h  UIConfig.h
src/hal/: pinout.h  pinout_knomi_v1.h  pinout_knomi_v2.h
src/network/: Auth.h  KlipperApi.h  KlipperApiRequest.h  KlipperStreaming.h  KnomiWebServer.h  WifiAccessPoint.h  WifiManager.h  WifiScanner.h  WifiStation.h
src/network/pages/: AbstractPage.h  ApiConfigWifiPost.h  ApiCoreDumpGet.h  ApiDumpHeapGet.h  ApiListFilesGet.h  ApiRestartPageGet.h  ApiScanNetworks.h  ApiStatusGet.h  ApiThemeConfigPost.h  ApiUploadFileDelete.h  ApiUploadFilePost.h  ChangePasswordPost.h  LoginPost.h  LogoutPost.h  RootPage.h  SecurityStatusGet.h  StaticFileContentGet.h  UpdatePost.h  WebsocketLog.h
src/network/requests/: KlipperApiRequest.h
src/scenes/: AbstractScene.h  BedHeatingScene.h  BootupLogo.h  ExtruderHeatingScene.h  HomingScene.h  LevelingScene.h  NoKlipperScene.h  Printing1PercentScene.h  PrintingScene.h  QGLevelingScene.h  SceneDeps.h  StandbyScene.h  VoronScene.h
src/ui/: AbstractScene.h  Arc.h  DisplayHAL.h  JsonThemeConfig.h  ResourceImage.h  SceneDeps.h  SceneManager.h  SceneTimer.h  TextLabel.h
test/: JsonThemeConfigTest.cpp
ui-ng/: compress.cjs  eslint.config.js  package-lock.json  package.json
ui-ng/src/: App.scss  App.svelte  main.ts
ui-ng/src/components/: Theme.svelte  ThemeFile.svelte
