[package]
name = "rs-flasher"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true

[[bin]]
name = "rs-flasher"
path = "./src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
espflash = { version = "3.3.0", default-features = false, features = ["serialport"] }
miette = { version = "7.5.0", features = ["fancy"] }
log = "0.4.26"
serde = "1.0.219"
serde_json = "1.0.140"
chrono = "0.4.40"
dialoguer = "0.11.0"
ctrlc = "3.4.5"
serialport = "4.7.1"
indicatif = "0.17.11"
env_logger = "0.11.6"
include-bytes-zstd = "0.1.0"
csv = "1.3.1"
hashbrown = "0.15.2"

[dev-dependencies]
hashbrown = "0.15.2"